# batchtrainingbooster

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: _data_mocks.py
notebooks/: train-boosting-models-ligthgbm.ipynb  train-boosting-models-old.ipynb  train-boosting-models-olds.ipynb  train-boosting-models.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
notebooks/catboost_info/test1/: events.out.tfevents
spark_config/: _spark_testcase.py
src/batchtrainingbooster/core/: __init__.py  base_trainer.py  weights.py
src/batchtrainingbooster/logger/: logger.py
src/batchtrainingbooster/notebooks/: train-boosting-models.ipynb
src/batchtrainingbooster/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
src/batchtrainingbooster/notebooks/catboost_info/learn/: events.out.tfevents
src/batchtrainingbooster/notebooks/catboost_info/test/: events.out.tfevents
src/batchtrainingbooster/notebooks/catboost_info/test1/: events.out.tfevents
src/batchtrainingbooster/spark_transform/: spark_transform.py
src/batchtrainingbooster/trainers/: catboost_trainer.py  lightgbm_trainer.py  xgboost_trainer.py
src/batchtrainingbooster/utils/: __init__.py  dataset_preprocessor.py  train-boosting-models.ipynb
tests/: test_add_bmi_ut.py  test_fit_catboost.py  test_fit_xgboost.py  test_trainer_init_catboost.py  test_trainer_init_xgboost.py
tests/data/: _data_mocks.py
tests/spark_config/: _spark_testcase.py
utils/: __init__.py  dataset_loader.py  dataset_preprocessor.py
