# ============================================================
# 1. MÉTADONNÉES DU PROJET (standard PEP 621)
# ============================================================
[project]
name = "batchtrainingbooster"                     # Nom du package
version = "0.1.0"                                 # Version (SemVer conseillé)
description = "Batch-wise incremental training with XGBoost/CatBoost and Spark"
authors = [{ name = "Manda Surel", email = "s239150.eps@gmail.com" }]
readme = "README.md"                              # Fichier README associé
requires-python = ">=3.11"                        # Versions Python supportées

# Dépendances principales (runtime)
dependencies = [
  "pandas>=2.3.2,<3.0.0",
  "numpy>=2.3.2,<3.0.0",
  "scikit-learn>=1.7.1,<2.0.0",
  "xgboost>=3.0.4,<4.0.0",
  "catboost>=1.2.8,<2.0.0",
  "pyspark>=4.0.0,<5.0.0"
]

# ============================================================
# 2. CONFIGURATION SPÉCIFIQUE À POETRY
# ============================================================
[tool.poetry]
# Indique à Poetry où se trouve le code source (layout src/)
packages = [{ include = "batchtrainingbooster", from = "src" }]

# Dépendances de développement (installées seulement en dev)
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
jupyterlab = "^4.4.6"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"
mypy = "^1.17.1"

# ============================================================
# 3. CONFIGURATION DU BUILD SYSTEM
# ============================================================
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
