# ============================================================
# CONFIGURATION POETRY (format Poetry, pas PEP 621)
# ============================================================
[tool.poetry]
name = "batchtrainingbooster"
version = "0.1.0"
description = "Batch-wise incremental training with XGBoost/CatBoost and Spark"
authors = ["Manda Surel <s239150.eps@gmail.com>"]
readme = "README.md"
packages = [{ include = "batchtrainingbooster", from = "src" }]

# Inclure le marqueur dans les artefacts
include = ["src/batchtrainingbooster/py.typed"]
# ============================================================
# DÉPENDANCES PRINCIPALES
# ============================================================
[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = ">=2.3.2,<3.0.0"
numpy = ">=2.3.2,<3.0.0"
scikit-learn = ">=1.7.1,<2.0.0"
xgboost = ">=3.0.4,<4.0.0"
catboost = ">=1.2.8,<2.0.0"
pyspark = ">=4.0.0,<5.0.0"

# ============================================================
# DÉPENDANCES DE DÉVELOPPEMENT
# ============================================================
lightgbm = "^4.6.0"
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
jupyterlab = "^4.4.6"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"
mypy = "^1.17.1"

# ============================================================
# CONFIGURATION DU BUILD SYSTEM
# ============================================================
ruff = "^0.12.12"
pandas-stubs = "^2.3.2.250827"
types-requests = "^2.32.4.20250809"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
disable_error_code = ["import-untyped"]
check_untyped_defs = true

[tool.ruff]
exclude = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["E402"]
